--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+.jumbotron {
+    height: 40vh;
+    background: url('assets/img/hero_mountains.jpg') no-repeat;
+    background-size: cover;
+    color: white;
+    
+  }
